Change from 8/5/2016 adding p5 audio recording

--- a/client/style.css
+++ b/client/style.css
@@ -4,7 +4,11 @@
 .top-margin {
 	margin-top: 50px;
 }
-
+.margin {
+	margin-top: 10px;
+	margin-left: 10px;
+	margin-bottom: 10px;
+}
 
 /*ID */
 #tryeditor {
