--- a/client/templates/tryaudiolist.html
+++ b/client/templates/tryaudiolist.html
@@ -1,10 +1,14 @@
 <template name="tryaudiolist">
-	<div class="container">
-		<div class="row">
-			<div id="sketch1">
-			</div>
-			
-		</div>
-	
-	</div>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<p>the sketch works here: </p>
+					</div>
+					<div id="s"></div>
+
+				</div><!-- / row-->
+			</div><!-- /container -->
+
+
+
 </template>
