--- a/client/templates/tryout.html
+++ b/client/templates/tryout.html
@@ -2,20 +2,21 @@
 	<h2>Trying the application</h2>
 	
 	<div class="container">
+		<hr>
 		<div class="row">
 			<div class="col-md-6 col-xs-12">
 				{{> tryeditor}}
 			</div>
-			<div class="col-md-6 col-xs-12">
-				{{> trytasklist}}
 			
+			
+			<div class="col-md-6 col-xs-12">
+			{{> trytasklist}}
+			<hr>
+			{{> tryaudiolist}}
 			</div>
-			<div class="row">
-				<div class="col-md-6 col-xs-6">
-					{{> tryaudiolist}}
-					<p>some test text for the tryaudiolist</p>
-				</div>
-			</div> <!-- -->
+			
+				
+			 <!--/row inner -->
 		</div> <!-- /row -->
 
 	</div> <!-- /container -->
