--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -3,15 +3,20 @@
   <div class="container">
     <div class="container-fluid">
       <div class="navbar-header">
-        <!-- navbar collapsed -->
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+         <!-- start collapsed navbar-->
+          <button 
+          type="button" 
+          class="navbar-toggle collapsed" 
+          data-toggle="collapse" 
+          data-target="#navbar" 
+          aria-expanded="false">
+            <!--using a glyphicon list icon-->
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
+          </button>
+      </div> <!-- / collapsed navbar-->
 
         <!-- navbar uncollapsed -->
+      <div class="collapse navbar-collapse" id="navbar">
         <a class="navbar-brand" href="{{pathFor route='home'}}">
           CreativeCompoz
         </a>
@@ -22,23 +27,15 @@
         </ul> -->
         <ul class="nav navbar-nav">
           	{{#if currentUser}}
-    	      	<li>
-    	      		<a href="#" class="logout">Logout</a>
-    	      	</li>
+    	      	<li><a href="#" class="logout">Logout</a></li>
           	{{else}}
-    	      	<li>
-    	      		<a href="{{pathFor route='login'}}">
-    	      			Log in 
-    	      		</a>
-          		</li> 
+    	      	<li><a href="{{pathFor route='login'}}">Log in</a></li> 
           		
-          		<li>
-    	      		<a href="{{pathFor route='register'}}">Register</a>
-    	      	</li>
+          		<li><a href="{{pathFor route='register'}}">Register</a></li>
           	{{/if}}
           </ul>
-        
-      </div> <!-- /navbar-header -->
+      </div> <!-- / navbar uncollapsed-->  
+      
     </div> <!-- /container-fluid -->
   </div><!-- /container-->
 </nav>
