--- a/client/templates/trytasklist.html
+++ b/client/templates/trytasklist.html
@@ -1,14 +1,8 @@
 <template name="trytasklist">
-	<div class="container">
-		<div class="row">
-			<form>
-				<input type="text" placeholder="Create a new task" name="newTryTask">
-			</form>
-		</div>
-		<div class="row">
-				<p>showing the first task: {{showTryTask}}</p> 
-		</div>
+		<form>
+			<input class="margin" type="text" placeholder="Create a new task" name="newTryTask">
+		</form>
 
-		<div id="visjsTryTaskList">	</div>
-	</div>
+		<p class="margin">showing the latest task: {{showTryTask}}</p> 
+		<div id="tryvisjs" class="margin">	</div>
 </template>
