--- a/client/templates/tryaudiolist.html
+++ b/client/templates/tryaudiolist.html
@@ -1,14 +1,5 @@
 <template name="tryaudiolist">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<p>the sketch works here: </p>
-					</div>
-					<div id="s"></div>
-
-				</div><!-- / row-->
-			</div><!-- /container -->
-
-
+			<p class="margin">AUDIO RECORDING WITH P5.JS (still buggy): </p>
+			<div id="s"></div>
 
 </template>
