--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -1,11 +1,31 @@
-
 <template name="register">
 	<h2>Register</h2>
-	<form class="register">
-		<p>Your name: <input type="username" name="username"></p>
-		<p>Email: <input type="email" name="email" required></p>
-		<p>Password: <input type="password" name="password" required></p>
-		<p><input type="submit" value="Register" class="btn btn-info"></p>
-	</form>
+	<form class="register form-horizontal" role="form">
+		<div class="form-group">
+			<label for="name" class="control-label col-sm-2">Username: </label>
+			<div class="col-sm-6">
+				<input type="name" class="form-control" name="name" required>
+			</div><!-- /col-sm-10-->
+		</div><!-- /form group-->
+		
+		<div class="form-group">
+			<label for="email" class="control-label col-sm-2">Email address: </label>
+			<div class="col-sm-6">
+				<input type="email" class="form-control" name="email" required>
+			</div><!-- /col-sm-10-->
+		</div><!-- /form group -->
 
+		<div class="form-group">
+			<label for="password" class="control-label col-sm-2">Password: </label>
+			<div class="col-sm-6">
+				<input type="password" class="form-control" name="password" required>
+			</div><!-- /col-sm-10-->
+		</div><!-- /form group -->
+
+		<div class="form-group">	
+			<div class="col-sm-offset-2 col-sm-6">
+				<input type="submit" value="Register" class="btn btn-info">
+			</div><!-- /offset-->
+		</div><!--/form group -->
+	</form>
 </template>
