--- a/client/templates/navbar.html
+++ b/client/templates/navbar.html
@@ -1,5 +1,5 @@
 <template name="navbar">
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -17,7 +17,7 @@
 
         <!-- navbar uncollapsed -->
       <div class="collapse navbar-collapse" id="navbar">
-        <a class="navbar-brand" href="{{pathFor route='home'}}">
+        <a class="navbar-brand" id="brand" href="{{pathFor route='start'}}">
           CreativeCompoz
         </a>
         <!-- <ul class="nav navbar-nav">
@@ -25,13 +25,14 @@
         		<a href="{{pathFor route='tryout'}}">Try out</a>
         	</li>	
         </ul> -->
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav navbar-right">
           	{{#if currentUser}}
-    	      	<li><a href="#" class="logout">Logout</a></li>
+              <li><a href="#" id="hiUser">Hi, {{currentUser.username}}, have fun!</a></li>
+    	      	<li><a href="{{pathFor route='start'}}" id="logout" class="logout">Logout</a></li>
           	{{else}}
-    	      	<li><a href="{{pathFor route='login'}}">Log in</a></li> 
+    	      	<li><a href="{{pathFor route='login'}}" id="login">Log in</a></li> 
           		
-          		<li><a href="{{pathFor route='register'}}">Register</a></li>
+          		<li><a href="{{pathFor route='register'}}" id="register">Register</a></li>
           	{{/if}}
           </ul>
       </div> <!-- / navbar uncollapsed-->  
