11/05/16 Started implementing project creation logic.

--- a/client/templates/myprojects.html
+++ b/client/templates/myprojects.html
@@ -1,28 +1,6 @@
 <template name="myprojects">
 	<h3>You are currently assigned to the following projects: </h3>
-	<table class="table table-striped">
-				<thead>
-					<tr>
-						<th>Project name</th>
-						<th>Category</th>
-						<th>Created At</th>
-						<th>Owner</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td><a href="#">placeholder pname</a></td>
-						<td>placeholder pcategory</td>
-						<td>placeholder pcreatedAt</td>
-						<td>placeholder powner</td>
-					</tr>
-					<tr>
-						<td><a href="#">placeholder pname</a></td>
-						<td>placeholder pcategory</td>
-						<td>placeholder pcreatedAt</td>
-						<td>placeholder powner</td>
-					</tr>
-				</tbody>
-
-			</table>
+		
+					{{> projectList}}
+				
 </template>
