--- a/client/templates/tryTodoItem.html
+++ b/client/templates/tryTodoItem.html
@@ -1,5 +1,5 @@
 
-<template name="todoItem">
+<template name="tryTodoItem">
 	<li class="{{checked}}">
 		<input type="checkbox" {{checked}}>
 		<input type="text" value="{{name}}" name="todoItem"> 
