Commit for working tryaudiolist template

--- a/client/templates/tryaudiolist.html
+++ b/client/templates/tryaudiolist.html
@@ -1,5 +1,13 @@
 <template name="tryaudiolist">
-			<p class="margin">AUDIO RECORDING: </p>
-			<div id="sketch"></div>
+			<p class="margin">RECORD YOUR MELODY: </p>
+			<div id="sketch" name="initial"></div>
+			<hr>
+			<div id="sketch1"></div>
+			<div id="sketch2"></div>
+			<div id="sketch3"></div>
+			<div id="sketch4"></div>
+			<div id="sketch5"></div>
+			<a href="#" class="js-reloadAudio">Record again?</a> 
 
+		
 </template>
