--- a/client/templates/audiolist.html
+++ b/client/templates/audiolist.html
@@ -1,3 +1,14 @@
 <template name="audiolist">
-	<h3> Audio Recording go here</h3>
+	<h3> Record your melody: </h3>
+		<hr>	
+		<div id="sketch" name="initial"></div>
+		
+		<div id="sketch1"></div>
+		<hr>
+		<div id="sketch2"></div>
+		<div id="sketch3"></div>
+		<div id="sketch4"></div>
+		<div id="sketch5"></div>
+		<a href="#" class="js-reloadAudio">Record again?</a> 
+			
 </template>
