--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -6,8 +6,7 @@
 			<div class="col-md-12 col-xs-12">
 				<!-- refer to myproject.html here-->
 				{{> myprojects}}
-				<!-- I want to test the audio-->
-				{{> audiotest}}
+				
 			</div>
 		</div><!-- / row-->
 		<hr>
@@ -27,7 +26,7 @@
 				<span class="glyphicon glyphicon-search"></span>
 				<h2>I WANT TO</h2>
 				<p><a href="{{pathFor route='searchproject'}}"><h3>Join a project I like</h3></a></p>
-				<P>Search among all existing project and join it! </P>
+				<P>Search among all existing project and join! </P>
 			</div>
 		</div><!-- /row2-->
 	</div><!-- /container -->
