--- a/client/templates/editor.html
+++ b/client/templates/editor.html
@@ -1,13 +1,26 @@
 <template name="editor">
 	<br>
-	<a href="/projects/:_id"><span class="glyphicon glyphicon-home"></span> BACK TO PROJECTS PAGE</a>
+	<a href="/projects/{{_id}}"><span class="glyphicon glyphicon-home"></span> BACK TO PROJECTS PAGE</a>
 	<BR>
 	<hr>
-	<h4>Document's title:</h4>
-	<input type="text" value="{{docTitle}}" name="currentDocument">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8 col-xs-12">
+				<h4>Document's title:</h4>
+					<input type="text" value="{{docTitle}}" name="currentDocument">
 
-	<h4>Content goes here:</h4>
-	
-	<!-- editor shall be shown only if there is a document-->
-		{{> sharejsText docid=docid id="editor"}}
+				<h4>Content goes here:</h4>
+				
+				<!-- editor shall be shown only if there is a document-->
+					{{> sharejsText docid=docid id="editor"}}
+			</div><!-- /col-->
+
+			<div class="col-md-4 col-xs-12">
+				<br>
+				{{> audiolist}}
+			</div>
+		</div>
+
+	</div>
+			
 </template>
