Commit on 15/05/16 5pm

--- a/client/templates/newproject.html
+++ b/client/templates/newproject.html
@@ -1,6 +1,6 @@
 <template name="newproject">
 
-<h1>newproject template placeholder</h1>
+<h1>DEFINE A NEW PROJECT</h1>
 <div class="panel">
 	<div class="panel-header">
 		<h3>Create your project</h3>
