--- a/client/templates/projectPage.html
+++ b/client/templates/projectPage.html
@@ -1,5 +1,5 @@
 <template name="projectPage">
-	<h1>YOUR PROJECT PAGE</h1>
+	<h1 align = "center">PROJECT WORK AREA</h1>
 	<!-- HERE: AN EDITABLE PROJECT TITLE-->
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
@@ -9,20 +9,20 @@
 			{{> projectList}}
 		</div>
 	</div><!-- /row1 -->
-	<div class="row">
+	<!-- <div class="row">
 		<h3>Placeholder EditingUsers</h3>
 
-	</div><!-- /row2 -->
+	</div> /row2 -->
 
-	<div class="row">
+	<!-- <div class="row">
 		<div class="col-md-12 col-xs-12">
 			{{> lastActivities}}
 		</div>
-	</div><!-- /row3-->
+	</div>/row3-->
 	
 	<div class="row">
 		<div class="col-md-12 col-xs-12">
-			<h3>Your Project:</h3>
+			<h3>Your Project Name:</h3>
 			<input type="text" value="{{pname}}" name="currentProject">
 		</div>
 	</div><!-- /row4-->
@@ -46,10 +46,10 @@
 				    <div class="modal-content">
 				      <div class="modal-header">
 				        <button type="button" class="close" data-dismiss="modal">&times;</button>
-				        <h4 class="modal-title">Create a new document in your project</h4>
+				        <h2 class="modal-title">CREATE A NEW DOCUMENT</h2>
 				      </div>
 				      <div class="modal-body">
-				        <p>Enter your document properties here.</p>
+				        <h4>Enter your document properties here.</h4>
 				        <form class="login form-horizontal" role="form">
 							<div class="form-group">
 								<label for="documentTitle" class="control-label col-sm-4">Document title: </label>
