--- a/client/templates/tryout.html
+++ b/client/templates/tryout.html
@@ -1,7 +1,8 @@
 <template name="tryout">
-	<h2>Trying the application</h2>
+	
 	
 	<div class="container">
+		<h2>The Sandbox</h2>
 		<hr>
 		<div class="row">
 			<div class="col-md-6 col-xs-12">
